Change date format to work with database.

--- a/arches_hip/templates/views/forms/actor-summary.htm
+++ b/arches_hip/templates/views/forms/actor-summary.htm
@@ -229,7 +229,7 @@
                                         <!-- Birthdate Date -->
                                         <div class="form-group datetimepicker" style="width:30%;">
                                             <div class="input-group">
-                                                <input type="text" name="mydate" id="date" placeholder="Date" class="form-control datepicker" data-dateformat="dd/mm/yy" data-bind="{value: getEditedNode('START_DATE_OF_EXISTENCE.E49', 'value')} ">
+                                                <input type="text" name="mydate" id="date" placeholder="Date" class="form-control datepicker" data-date-format="YYYY-MM-DD" data-bind="{value: getEditedNode('START_DATE_OF_EXISTENCE.E49', 'value')} ">
                                                 <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
                                             </div>
                                         </div>&nbsp;
@@ -254,7 +254,7 @@
                                         <!-- Birthdate -->
                                         <div class="form-group datetimepicker" style="width:100%;">
                                             <div class="input-group">
-                                                <input type="text" name="mydate" id="date" placeholder="Date" class="form-control datepicker" data-dateformat="dd/mm/yy" data-bind="{value: getEditedNode('BEGINNING_OF_EXISTENCE_TYPE.E55', 'value')} ">
+                                                <input type="text" name="mydate" id="date" placeholder="Date" class="form-control datepicker" data-date-format="YYYY-MM-DD" data-bind="{value: getEditedNode('BEGINNING_OF_EXISTENCE_TYPE.E55', 'value')} ">
                                                 <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
                                             </div>
                                         </div>&nbsp;
@@ -337,7 +337,7 @@
                                         <!-- Birthdate Date -->
                                         <div class="form-group datetimepicker" style="width:30%;">
                                             <div class="input-group">
-                                                <input type="text" name="mydate" id="date" placeholder="Date" class="form-control datepicker" data-dateformat="dd/mm/yy" data-bind="{value: getEditedNode('END_DATE_OF_EXISTENCE.E49', 'value')} ">
+                                                <input type="text" name="mydate" id="date" placeholder="Date" class="form-control datepicker" data-date-format="YYYY-MM-DD" data-bind="{value: getEditedNode('END_DATE_OF_EXISTENCE.E49', 'value')} ">
                                                 <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
                                             </div>
                                         </div>&nbsp;
@@ -362,7 +362,7 @@
                                         <!-- Birthdate -->
                                         <div class="form-group datetimepicker" style="width:100%;">
                                             <div class="input-group">
-                                                <input type="text" name="mydate" id="date" placeholder="From" class="form-control datepicker" data-dateformat="dd/mm/yy" data-bind="{value: getEditedNode('END_OF_EXISTENCE_TYPE.E55', 'value')} ">
+                                                <input type="text" name="mydate" id="date" placeholder="From" class="form-control datepicker" data-date-format="YYYY-MM-DD" data-bind="{value: getEditedNode('END_OF_EXISTENCE_TYPE.E55', 'value')} ">
                                                 <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
                                             </div>
                                         </div>&nbsp;
