--- a/arches_hip/templates/views/forms/activity-actions.htm
+++ b/arches_hip/templates/views/forms/activity-actions.htm
@@ -21,7 +21,7 @@
 
                             <div class="row">
 
-                                <div class="col-xs-12 padding-left-0">
+                                <div class="col-xs-12">
 
                                 <!-- Screens greater than xs -->
                                 <form class="form-inline arches-form hidden-xs" role="form">
@@ -29,7 +29,7 @@
                                         
                                         <!-- Period and From/To Dates -->
                                         <div>
-                                            <div style="width:20%;" class="select2 arches-select2-crud-form resource-type" id="period-dropdown" data-bind="select2: {value: getEditedNode('ACTIVITY_TYPE.E55', 'value'), placeholder: '{% trans "start action" %}', multiple: false, dataKey: 'ACTIVITY_TYPE.E55'}">
+                                            <div style="width:35%;" class="select2 arches-select2-crud-form resource-type" id="period-dropdown" data-bind="select2: {value: getEditedNode('ACTIVITY_TYPE.E55', 'value'), placeholder: '{% trans "start action" %}', multiple: false, dataKey: 'ACTIVITY_TYPE.E55'}">
                                             </div>&nbsp;
                                         
                                             <div class="form-group" style="padding-left: 0px; padding-right: 0px; width: 25%;">
@@ -80,18 +80,7 @@
                                                 </div>
                                             </div>
 
-                                            <!-- Add Button -->
-<!--                                             <div class="btn-group">
-                                                <button type="button" id="address-button" class="btn btn-primary" style="height: 32px;">Add</button>
-                                                <button type="button" class="btn btn-primary dropdown-toggle" style="height: 32px;" data-toggle="dropdown">
-                                                    <i class="fa fa-chevron-down"></i>
-                                                    <span class="sr-only">Toggle Dropdown</span>                            
-                                                </button>
-                                                <ul class="dropdown-menu" role="menu">
-                                                    <li><a href="#">Discard edits</a></li>
-                                                </ul>
-                                            </div> -->
-                                            <!-- End Add Button -->
+                                            {% include 'views/components/add-item-button.htm' %}
 
                                         </div>
                                     </form>
@@ -126,8 +115,8 @@
                                     <a href="javascript:void(0)" class="arches-CRUD-child" title="Delete this name"><i data-bind='click: $parent.deleteItem.bind($parent)' class="arches-CRUD-delete fa fa-trash-o"></i></a>
                                     <a href="javascript:void(0)" class="arches-CRUD-child arches-CRUD-edit" data-bind='click: $parent.editItem.bind($parent)' title="Edit this name">
                                         <span data-bind='text: nodes.get("ACTIVITY_TYPE.E55", "label")' style="padding-right:2px;"></span><span class="text-muted arches-crud-type-identifier"> ({% trans "Activity type" %}),</span>
-                                        <span data-bind='text: nodes.get("FROM_DATE.E49", "value").substr(0,10)' style="padding-right:2px;"></span>({% trans "Start Date" %})<span class="text-muted arches-crud-type-identifier"></span>
-                                        <span data-bind='text: nodes.get("TO_DATE.E49", "value").substr(0,10)' style="padding-right:2px;">({% trans "End Date" %})</span>
+                                        <span data-bind='text: nodes.get("FROM_DATE.E49", "value").substr(0,10)' style="padding-right:2px;"></span><span class="text-muted arches-crud-type-identifier">({% trans "Start Date" %}),</span>
+                                        <span data-bind='text: nodes.get("TO_DATE.E49", "value").substr(0,10)' style="padding-right:2px;"></span><span class="text-muted arches-crud-type-identifier">({% trans "End Date" %})</span>
                                     </a>
                                 </div>
                             </div>
