--- a/arches_hip/templates/views/forms/activity-actions.htm
+++ b/arches_hip/templates/views/forms/activity-actions.htm
@@ -29,7 +29,7 @@
                                         
                                         <!-- Period and From/To Dates -->
                                         <div>
-                                            <div style="width:35%;" class="select2 arches-select2-crud-form resource-type" id="period-dropdown" data-bind="select2: {value: getEditedNode('ACTIVITY_TYPE.E55', 'value'), placeholder: '{% trans "start action" %}', multiple: false, dataKey: 'ACTIVITY_TYPE.E55'}">
+                                            <div style="width:30%;" class="select2 arches-select2-crud-form resource-type" id="period-dropdown" data-bind="select2: {value: getEditedNode('ACTIVITY_TYPE.E55', 'value'), placeholder: '{% trans "start action" %}', multiple: false, dataKey: 'ACTIVITY_TYPE.E55'}">
                                             </div>&nbsp;
                                         
                                             <div class="form-group" style="padding-left: 0px; padding-right: 0px; width: 25%;">
@@ -55,34 +55,28 @@
 
                                     <!-- Form for screens = xs -->
                                     <form class="form-inline arches-form hidden-sm hidden-md hidden-lg" role="form">
-                                        <div class="form-group" style="width: 100%">
-
-                                            <input class="activity-start" id="" name="" style="width:100%;"  value="">
-
-                                            <!-- Spacer (for xs screens) -->
-                                            <div class="margin-top-5 hidden-sm hidden-md hidden-lg"></div>
-
-                                            <!-- Start Date -->
-                                            <div class="form-group" style="width:100%;">
-                                                <div class="input-group">
-                                                    <input type="text" name="mydate" placeholder="start date" class="form-control datepicker" data-dateformat="dd/mm/yy">
+                                        <!-- Period and From/To Dates -->
+                                        <div>
+                                            <div style="margin-bottom: 5px; width:100%;" class="select2 arches-select2-crud-form resource-type" id="period-dropdown" data-bind="select2: {value: getEditedNode('ACTIVITY_TYPE.E55', 'value'), placeholder: '{% trans "start action" %}', multiple: false, dataKey: 'ACTIVITY_TYPE.E55'}">
+                                            </div>
+                                        
+                                            <div class="form-group" style="padding-left: 0px; padding-right: 0px; padding-bottom: 0px; margin-bottom: 5px; width: 100%;">
+                                                <div class="input-group datetimepicker" style ="width:100%;" >
+                                                    <input type="text" id="action_to_date" style="height: 32px;" placeholder="{% trans 'start date' %}" class="form-control datepicker" data-date-format="YYYY-MM-DD" data-bind="{value: getEditedNode('TO_DATE.E49', 'value')} ">
                                                     <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
                                                 </div>
                                             </div>
 
-                                            
-
-                                            <!-- Start Date -->
-                                            <div class="form-group" style="width:100%;">
-                                                <div class="input-group">
-                                                    <input type="text" name="mydate" placeholder="end date" class="form-control datepicker" data-dateformat="dd/mm/yy">
+                                            <div class="form-group" style="padding-left: 0px; padding-right: 0px; margin-bottom: 5px; width: 100%;">
+                                                <div class="input-group datetimepicker" style ="width:100%;" >
+                                                    <input type="text" id="action_from_date" style="height: 32px;" placeholder="{% trans 'end date' %}" class="form-control datepicker" data-date-format="YYYY-MM-DD" data-bind="{value: getEditedNode('FROM_DATE.E49', 'value')} ">
                                                     <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
                                                 </div>
                                             </div>
 
-                                            {% include 'views/components/add-item-button.htm' %}
-
+                                        {% include 'views/components/add-item-button.htm' %}
                                         </div>
+
                                     </form>
                                     <!-- Form for screens = xs -->
                                 </div>
