--- a/arches_hip/templates/views/forms/activity-summary.htm
+++ b/arches_hip/templates/views/forms/activity-summary.htm
@@ -19,7 +19,7 @@
                     </dt>
 
                     <!-- Form -->
-                    <dd>
+                     <dd class="hidden-xs">
                         <div class="row">
 
                             <div class="col-xs-12">
@@ -30,6 +30,26 @@
                                 <div class="margin-top-5 hidden-sm hidden-md hidden-lg"></div>
                                 
                                 <input style="width:30%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form name-type hidden-xs" id="resource-name-type" data-bind="select2: {value: getEditedNode('NAME_TYPE.E55', 'value'), placeholder: 'Type', dataKey: 'NAME_TYPE.E55'}"></input>
+
+                                <!-- Spacer (for xs screens) -->
+                                <div class="margin-top-5 hidden-sm hidden-md hidden-lg"></div>
+
+                                {% include 'views/components/add-item-button.htm' %}
+
+                            </div>
+                        </div>
+                    </dd>
+                    <dd class="hidden-sm hidden-md hidden-lg">
+                        <div class="row">
+
+                            <div class="col-xs-12">
+                                        
+                                <input class="form-control arches-form-input" id="resource-name" style="width: 100%;" placeholder="Name" data-bind='value: getEditedNode("NAME.E41", "value")'>                                    
+
+                                <!-- Spacer (for xs screens) -->
+                                <div class="margin-top-5 hidden-sm hidden-md hidden-lg"></div>
+                                
+                                <input style="width:100%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form name-type" id="resource-name-type" data-bind="select2: {value: getEditedNode('NAME_TYPE.E55', 'value'), placeholder: 'Type', dataKey: 'NAME_TYPE.E55'}"></input>
 
                                 <!-- Spacer (for xs screens) -->
                                 <div class="margin-top-5 hidden-sm hidden-md hidden-lg"></div>
@@ -104,12 +124,24 @@
                                 <!-- Spacer (for xs screens) -->
                                 <div class="margin-top-5 hidden-sm hidden-md hidden-lg"></div>
 
-                                <div class="col-sm-6" style="padding-right: 5px;padding-left: 0px;">
+                                <div class="col-sm-6 hidden-xs" style="padding-right: 5px;padding-left: 0px;">
                                     <input style="height: 36px; width:100%" class="select2 arches-select2-crud-form" id="date-type" placeholder="Date type" data-bind="select2: {value: getEditedNode('BEGINNING_OF_EXISTENCE_TYPE.E55', 'value'), dataKey: 'BEGINNING_OF_EXISTENCE_TYPE.E55'}">
                                     </input>
                                 </div>
 
-                                <div class="col-sm-4 form-group" style="padding-left: 0px; padding-right: 0px; width: 30%;">
+                                <div class="col-sm-4 form-group hidden-xs" style="padding-left: 0px; padding-right: 0px; width: 30%;">
+                                    <div class="input-group datetimepicker" style ="width:100%; height: 34px;" >
+                                        <input type="text" id="date" placeholder="{% trans 'yyyy-mm-dd' %}" class="form-control datepicker" data-date-format="YYYY-MM-DD" data-bind="{value: getEditedNode('START_DATE_OF_EXISTENCE.E49', 'value')} ">
+                                        <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
+                                    </div>
+                                </div>
+
+                                <div class="col-sm-6  hidden-sm hidden-md hidden-lg" style="padding-right: 0px;padding-left: 0px;">
+                                    <input style="height: 36px; width:100%" class="select2 arches-select2-crud-form" id="date-type" placeholder="Date type" data-bind="select2: {value: getEditedNode('BEGINNING_OF_EXISTENCE_TYPE.E55', 'value'), dataKey: 'BEGINNING_OF_EXISTENCE_TYPE.E55'}">
+                                    </input>
+                                </div>
+
+                                <div class="col-sm-4 form-group  hidden-sm hidden-md hidden-lg" style="padding-left: 0px; padding-right: 0px; width: 100%;">
                                     <div class="input-group datetimepicker" style ="width:100%; height: 34px;" >
                                         <input type="text" id="date" placeholder="{% trans 'yyyy-mm-dd' %}" class="form-control datepicker" data-date-format="YYYY-MM-DD" data-bind="{value: getEditedNode('START_DATE_OF_EXISTENCE.E49', 'value')} ">
                                         <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
@@ -122,6 +154,7 @@
                                 {% include 'views/components/add-item-button.htm' %}
 
                             </div>
+
                         </div>
                     </dd>
                     <!-- End Form -->
@@ -164,6 +197,8 @@
     <!-- End Dates Records -->
 </div>
 
+<hr class="divider arches-RDM-divider">
+
 <div id="end-dates-section">
     <!-- Dates CRUD Form -->
     <div class="row">
@@ -186,12 +221,24 @@
                                 <!-- Spacer (for xs screens) -->
                                 <div class="margin-top-5 hidden-sm hidden-md hidden-lg"></div>
 
-                                <div class="col-sm-6" style="padding-right: 5px;padding-left: 0px;">
+                                <div class="col-sm-6 hidden-xs" style="padding-right: 5px;padding-left: 0px;">
                                     <input style="height: 36px; width:100%" class="select2 arches-select2-crud-form" id="date-type" placeholder="Date type" data-bind="select2: {value: getEditedNode('END_OF_EXISTENCE_TYPE.E55', 'value'), dataKey: 'END_OF_EXISTENCE_TYPE.E55'}">
                                     </input>
                                 </div>
 
-                                <div class="col-sm-4 form-group" style="padding-left: 0px; padding-right: 0px; width: 30%;">
+                                <div class="col-sm-4 form-group hidden-xs" style="padding-left: 0px; padding-right: 0px; width: 30%;">
+                                    <div class="input-group datetimepicker" style ="width:100%; height: 34px;" >
+                                        <input type="text" id="date" placeholder="{% trans 'yyyy-mm-dd' %}" class="form-control datepicker" data-date-format="YYYY-MM-DD" data-bind="{value: getEditedNode('END_DATE_OF_EXISTENCE.E49', 'value')} ">
+                                        <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
+                                    </div>
+                                </div>
+
+                                <div class="col-sm-6  hidden-sm hidden-md hidden-lg" style="padding-right: 0px;padding-left: 0px;">
+                                    <input style="height: 36px; width:100%" class="select2 arches-select2-crud-form" id="date-type" placeholder="Date type" data-bind="select2: {value: getEditedNode('END_OF_EXISTENCE_TYPE.E55', 'value'), dataKey: 'END_OF_EXISTENCE_TYPE.E55'}">
+                                    </input>
+                                </div>
+
+                                <div class="col-sm-4 form-group  hidden-sm hidden-md hidden-lg" style="padding-left: 0px; padding-right: 0px; width: 100%;">
                                     <div class="input-group datetimepicker" style ="width:100%; height: 34px;" >
                                         <input type="text" id="date" placeholder="{% trans 'yyyy-mm-dd' %}" class="form-control datepicker" data-date-format="YYYY-MM-DD" data-bind="{value: getEditedNode('END_DATE_OF_EXISTENCE.E49', 'value')} ">
                                         <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
@@ -263,8 +310,16 @@
                     <!-- Form -->
                     <dd>
                         <div class="row">
-                            <div class="col-xs-12">
+                            <div class="col-xs-12 hidden-xs">
                                 <input style="width:80%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form resource-type" id="keyword-dropdown" data-bind="select2: {value: getEditedNode('KEYWORD.E55', 'value'), placeholder: 'Keyword', dataKey: 'KEYWORD.E55'}"></input>
+
+                                <!-- Spacer (for xs screens) -->
+                                <div class="margin-top-5 hidden-sm hidden-md hidden-lg"></div>
+
+                                {% include 'views/components/add-item-button.htm' %}
+                            </div>
+                            <div class="col-xs-12 hidden-sm hidden-md hidden-lg">
+                                <input style="width:100%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form resource-type" id="keyword-dropdown" data-bind="select2: {value: getEditedNode('KEYWORD.E55', 'value'), placeholder: 'Keyword', dataKey: 'KEYWORD.E55'}"></input>
 
                                 <!-- Spacer (for xs screens) -->
                                 <div class="margin-top-5 hidden-sm hidden-md hidden-lg"></div>
