Adding classification wizard form

--- a/arches_hip/templates/views/forms/condition.htm
+++ b/arches_hip/templates/views/forms/condition.htm
@@ -204,7 +204,7 @@
                                                                     </div>
 
                                                                     <!-- Spacer for xs screens -->
-                                                                <div class="margin-top-5 hidden-lg hidden-md hidde-sm"></div>
+                                                                <div class="margin-top-5 hidden-lg hidden-md hidden-sm"></div>
 
                                                                 </div>
 
